Fix precedence with multiple attribute sets

Move the duplicate attribute check from xsltAttributeInternal to
xsltMergeAttrSets. Fixes bug 764411:

https://bugzilla.gnome.org/show_bug.cgi?id=764411